// *****************************************************************************
//
// This file is part of a MASA library or program.
// Refer to the included end-user license agreement for restrictions.
//
// Copyright (c) 2010 MASA Group
//
// *****************************************************************************

import "common.proto";
import "client_simulation.proto";
import "version.proto";

package sword;

/** @internal
 *  @addtogroup Launcher
 *  @{
 */

/** @struct ConnectionRequest
    @brief Defines a request connection to launcher
*/
message ConnectionRequest {
    //! launcher client version, used to check compatibility
    required ProtocolVersion client_version = 1;
}

/** @struct ExerciseListRequest
    @brief retrieve list of exercises available on launcher
*/
message ExerciseListRequest {}

/** @struct SessionNotification
    @brief notification to specified exercise/session
*/
message SessionNotificationRequest {
    message DirectoryChange {}
    message Notification {
        optional DirectoryChange    directory_change = 1;
    }
    //! exercise to send notification to
    required string         exercise      = 1;
    //! session to send notification to
    required string         session       = 2;
    //! notifiaction to send
    required Notification   notification  = 3;
}

message AdminToLauncher {
    message Content {
        optional ConnectionRequest          connection_request        = 1;
        optional ExerciseListRequest        exercise_list_request     = 4;
        optional SessionNotificationRequest session_notification      = 12;
    }
    optional int32   context = 1;
    required Content message = 2;
}

/** @}*/
